--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@ body{
     height: 100vh;
     width: 89%;
     place-items: center;
-   
-    background: linear-gradient(90deg,blue 0%, orange 28%, purple 56%, rgb(0, 255, 0) 78%, gold 100%);
+   background-color: lightgreen;
+    /* background: linear-gradient(90deg,blue 0%, orange 28%, purple 56%, rgb(0, 255, 0) 78%, gold 100%); */
 }
 .container
 {
@@ -24,7 +24,9 @@ body{
     box-shadow: 0 6px 6px   black;
     height: 64%;
     width: 80%;
-    background: radial-gradient(at center, rgba(214, 202, 202, 0.05), rgba(224, 217, 217, 0.5));
+    background-color: red;
+    /* background: radial-gradient(at center, rgba(214, 202, 202, 0.05), rgba(224, 217, 217, 0.5)); */
+
     margin: auto;
 }
 
